[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_gage"
dist-name = "yaqd-gage"
author = "Blaise Thompson"
author-email = "blaise@untzag.com"
home-page = "https://yaq.fyi"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["yaqd-core>=2020.06.3",
            "numpy",
            "toml>=0.10.2",
            "yaq-traits",
            "qtypes",
            "toml",
            ]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/yaqd-gage"
Issues = "https://gitlab.com/yaq/yaqd-gage/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-gage-compuscope = "yaqd_gage._compuscope:CompuScope.main"
yaqd-gage-chopping = "yaqd_gage._chopping:CompuScope.main"

[tool.flit.entrypoints."yaqc_qtpy.main.gage_chopping"]
gage-samples = "yaqd_gage.gui._samples_gui:SamplesGUI"
gage-segments = "yaqd_gage.gui._segments_gui:SegmentsGUI"

[tool.flit.entrypoints."yaqc_qtpy.main.gage_compuscope"]
gage-samples = "yaqd_gage.gui._samples_gui:SamplesGUI"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
