[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yaqd-gage"
authors = [
  {name = "Blaise Thompson", email="blaise@untzag.com"},
]
maintainers = [
  {name="yaq Developers"},
]
requires-python = ">=3.7"
dependencies = ["yaqd-core>=2020.06.3",
            "numpy",
            "toml>=0.10.2",
            "yaq-traits",
            "qtypes",
            "toml",
            ]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]
license = "LGPL-3.0-or-later"
dynamic = ["version"]

[project.urls]
Homepage = "https://yaq.fyi"
Source = "https://github.com/yaq-project/yaqd-gage"
Issues = "https://github.com/yaq-project/yaqd-gage/issues"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[project.scripts]
yaqd-gage-compuscope = "yaqd_gage._compuscope:CompuScope.main"
yaqd-gage-chopping = "yaqd_gage._chopping:CompuScope.main"

[project.entry-points."yaqc_qtpy.main.gage_chopping"]
gage-samples = "yaqd_gage.gui._samples_gui:SamplesGUI"
gage-segments = "yaqd_gage.gui._segments_gui:SegmentsGUI"

[project.entry-points."yaqc_qtpy.main.gage_compuscope"]
gage-samples = "yaqd_gage.gui._samples_gui:SamplesGUI"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
